@@ -336,3 +336,4 @@ suggestions:
   Martin F. Krafft
   tom-doerr
   ad-si
+  Adrien Lemaire
